2008-09-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (verify_type_compatibility_full): Revert change
	to allow converting a native int to unmanaged pointer be verifiable
	under non-strict mode.
	It turns out that "(IntPtr)null" is indeed unverifiable, go figure.

	* verify.c: Added some TODOs.

2008-09-02  Bill Holmes  <billholmes54@gmail.com>

	* marshal.c (ves_icall_System_Runtime_InteropServices_Marshal_StringToHGlobalAnsi,
	  ves_icall_System_Runtime_InteropServices_Marshal_StringToHGlobalUni) :
	  Changed to use GlobalAlloc for the memory returned on Windows platforms.

	Code is contributed under MIT/X11 license.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* object.c (mono_ldstr_metdata_sig): renamed to mono_ldstr_metadata_sig.

2008-09-02 Rodrigo Kumpera  <rkumpera@novell.com>

	reflection.c (typebuilder_setup_fields): Handle classes with
	explicit size.

2008-09-01 Rodrigo Kumpera  <rkumpera@novell.com>

	class.c (mono_class_setup_events): Add memory barrier due to
	double checked locking.
	
	class.c (mono_class_setup_properties): Same.

2008-08-31  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_is_assignable_from): Fix the build.
	
	* class.c (mono_class_is_assignable_from): Call mono_class_setup_vtable ()
	before accessing klass->interface_bitmap. Fixes #421744.

2008-08-28  Zoltan Varga  <vargaz@gmail.com>

	* appdomain.c (mono_runtime_set_no_exec): New internal function setting
	the runtime into no-exec mode, useful when running the AOT compiler.

	* appdomain.c gc.c object.c: Avoid executing managed code when running
	in no-exec mode.
	
	* rawbuffer.c (mono_raw_buffer_load_mmap): Disable this on the iphone.

	* reflection.c (_mono_reflection_get_type_from_info): Handle the 
	special case when the mono_assembly_loaded () returns NULL because the 
	search hook is not installed.

2008-08-25  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c: Applied patch from tom hindle (tom_hindle@sil.org) to fix
	crashes in bstr marshalling on linux.
